Fix the commit message on small screens

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2396,7 +2396,8 @@ tbody.commit-list {
         width: 100%;
     }
     th .message-wrapper {
-        max-width: 200px;
+        display: block;
+        max-width: 90vw;
     }
 }
 
